--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <div class="content">
-            <div class="tworpus"><a href="index.html">Tworpus</a></div>
+            <div class="tworpus"><a href="http://localhost:3000/">Tworpus</a></div>
             <div class="navi">
                 <div class="navi-btn">About</div>
                 <div class="navi-btn">Stats</div>
@@ -74,7 +74,7 @@
         <div class="download-btn">Download</div>
     </div>
     <footer>
-        <div class="disclaimer">©2014 Tworpus <a class="plainLink" href="../../Tworpus-Website/html/disclaimer.html">Contact / Disclaimer</a></div>
+        <div class="disclaimer">©2014 Tworpus <a class="plainLink" href="/html/disclaimer.html">Contact / Disclaimer</a></div>
         <div class="information">We do not store any tweet texts or personal twitter user data. This webpage, our Twitter metadata crawler and the retrieval tool are available under the GPL v.3 license. Tworpus is a non commercial service distributed by the media informatics group (University Regensburg). If you have any questions or feedback please contact: <a class="plainLink" href="mailTo:alexander.bazo@ur.de">alexander.bazo@ur.de</a></div>
     </footer>
 </body>
