--- a/public/res/css/style.css
+++ b/public/res/css/style.css
@@ -64,7 +64,7 @@ body {
     color: #DFFB3F;
 }
 
-.header .navi > *{
+.header .navi > * {
     display: inline;
     width: 200px;
 }
@@ -301,7 +301,7 @@ body {
     background: #252E2A none;
     color: #fff;
     text-align: center;
-    min-height: 185px;
+    min-height: 338px;
 }
 
 .stats .numbers {
@@ -316,11 +316,13 @@ body {
 .stats .text-left {
     margin: 10px 0 0 0;
     text-align: left;
+    height: 61px;
 }
 
 .stats .text-right {
     margin: 10px 0 0 0;
     text-align: right;
+    height: 61px;
 
 }
 
