--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
                 <div class="navi-btn">About</div>
                 <div class="navi-btn">Stats</div>
                 <div class="navi-btn">Software</div>
-                <div class="navi-btn">Community</div>
+                <!--<div class="navi-btn">Community</div>-->
             </div>
         </div>
     </header>
@@ -56,23 +56,23 @@
         You can download the desktop client to restore your Twitter corpus with a corpus file from this website. The tool is available as an app for OS X and for other operating systems as a JAVA executable.
         <div class="download-btn">Download</div>
     </div>
-    <div class="community center">
-        <div class="headline">Visualisations & Data Converter</div>
-        Here you can get custom Visualisations and Data Converter for the desktop client made by the community. <p>If you wrote a Visualization or a Data Converter feel free to contribute it to the community.</p><p> Just mail us, attach the plugin and add a screenshot and some description to it.</p>
-        <div class="upload-btn">Contribute</div>
-        <div class="visualisations-btn">Visualisations</div>
-        <div class="dataconverter-btn">Data Converter</div>
-        <div class="visualisations-container"></div>
-        <div class="dataconverter-container"></div>
-        </div>
-    <div class="overlay"></div>
-    <div class="item-detail-view">
-        <div class="close"></div>
-        <div class="item-detail-view-img"></div>
-        <div class="item-detail-view-title"></div>
-        <div class="item-detail-view-desc"></div>
-        <div class="download-btn">Download</div>
-    </div>
+    <!--<div class="community center">-->
+        <!--<div class="headline">Visualisations & Data Converter</div>-->
+        <!--Here you can get custom Visualisations and Data Converter for the desktop client made by the community. <p>If you wrote a Visualization or a Data Converter feel free to contribute it to the community.</p><p> Just mail us, attach the plugin and add a screenshot and some description to it.</p>-->
+        <!--<div class="upload-btn">Contribute</div>-->
+        <!--<div class="visualisations-btn">Visualisations</div>-->
+        <!--<div class="dataconverter-btn">Data Converter</div>-->
+        <!--<div class="visualisations-container"></div>-->
+        <!--<div class="dataconverter-container"></div>-->
+    <!--</div>-->
+    <!--<div class="overlay"></div>-->
+    <!--<div class="item-detail-view">-->
+        <!--<div class="close"></div>-->
+        <!--<div class="item-detail-view-img"></div>-->
+        <!--<div class="item-detail-view-title"></div>-->
+        <!--<div class="item-detail-view-desc"></div>-->
+        <!--<div class="download-btn">Download</div>-->
+    <!--</div>-->
     <footer>
         <div class="disclaimer">©2014 Tworpus <a class="plainLink" href="/html/disclaimer.html">Contact / Disclaimer</a></div>
         <div class="information">We do not store any tweet texts or personal twitter user data. This webpage, our Twitter metadata crawler and the retrieval tool are available under the GPL v.3 license. Tworpus is a non commercial service distributed by the media informatics group (University Regensburg). If you have any questions or feedback please contact: <a class="plainLink" href="mailTo:alexander.bazo@ur.de">alexander.bazo@ur.de</a></div>
