donwload directories created

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
     <div class="software center">
         <div class="headline">Software</div>
         You can download the desktop webclient right here <p>or get if from <a class="plainLink" target="_blank" href="https://github.com/markusmichel/Tworpus-Client">GitHub</a></p>
-        <div class="download-btn apple"><img src="res/gfx/apple.png"></div>
+        <div class="download-btn macos"><img src="res/gfx/apple.png"></div>
         <div class="download-btn windows"><img src="res/gfx/windows.png"></div>
         <div class="download-btn linux"><img src="res/gfx/linux.png"></div>
     </div>
